login/signup done

--- a/base/src/index.css
+++ b/base/src/index.css
@@ -4,6 +4,7 @@
   margin: 0;
   box-sizing: border-box;
   font-family: Outfit;
+  scroll-behavior: smooth;
 }
 body{
   min-height: 100vh;
@@ -19,4 +20,7 @@ body{
   100%{
     opacity: 1;
   }
+}
+a{
+  text-decoration: none;
 }
